# dataprism

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml
config/policies/: classification.example.yaml
docs/: ARCHITECTURE.md
scripts/: smoke_setup.py  smoke_setup_postgres.py
src/dataprism/: __init__.py
src/dataprism/adapters/: __init__.py  errors.py  postgres.py  protocol.py  sqlite.py
src/dataprism/audit/: __init__.py  events.py  service.py  storage.py
src/dataprism/classification/: __init__.py  candidates.py  engine.py  evaluators.py  results.py  table.py
src/dataprism/cli/: __init__.py  adapters.py  main.py  paths.py  render.py
src/dataprism/cli/templates/: report.html.j2
src/dataprism/core/: __init__.py  exceptions.py
src/dataprism/policy/: __init__.py  errors.py  loader.py  models.py
tests/: conftest.py  test_smoke.py
tests/adapters/: fixtures.py  test_postgres.py  test_sqlite.py
tests/audit/: test_events.py  test_service.py  test_storage.py
tests/classification/: test_candidates.py  test_engine.py  test_evaluators.py  test_table.py
tests/cli/: test_adapters.py  test_main.py  test_paths.py  test_render.py
tests/fixtures/policies/: invalid_classification_label.yaml  invalid_discriminator.yaml  malformed_yaml.yaml  missing_required.yaml  unknown_field.yaml  valid_classification.yaml  valid_minimal.yaml
tests/policy/: test_loader.py  test_models.py
