[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dataprism"
version = "0.1.0"
description = "Data governance toolkit: audit logging, policy engine, classification, and quality checks for relational data"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "dataprism contributors" },
]
keywords = ["data-governance", "audit", "classification", "data-quality", "policy", "compliance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries",
    "Topic :: Security",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "sqlalchemy>=2.0",
    "structlog>=24.0",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.6.9",
    "mypy>=1.11",
    "pre-commit>=3.8",
]

[project.scripts]
dataprism = "dataprism.cli:main"

[project.urls]
# Update these once the project has a public home.
# Homepage = "https://github.com/deswhk/dataprism"
# Repository = "https://github.com/deswhk/dataprism.git"
# Issues = "https://github.com/deswhk/dataprism/issues"

[tool.setuptools]
packages = ["dataprism"]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes (unused imports, undefined names)
    "I",   # isort (import ordering)
    "B",   # flake8-bugbear (common bugs)
    "UP",  # pyupgrade (modernize syntax)
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
files = ["src/dataprism"]